# datago

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  HOWTO.md  LICENSE  MANIFEST.in  README.md  WORKLOG.md  generate_python_package.sh  go.mod  go.sum  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.txt  test_dataset_pil.py  test_implicit_conversion.py  test_pil_conversion.py
.github/workflows/: ci-cd.yml  cicd.yml  go.yml  gopy.yml  rust-py.yml  rust.yml
cmd/: main.go
cmd/db/: main.go
cmd/filesystem/: main.go
datago/: Cargo.toml  README.md  demo.py  pyproject.toml
datago/src/: client.rs  generator_http.rs  image_processing.rs  lib.rs  worker_http.rs
pkg/: architecture.go  backend_http.go  client.go  core.go  dynamic_pool.go  frontend_db.go  generator_db.go  generator_filesystem.go  generator_webdataset.go  serdes.go  transforms.go  utils.go  worker_filesystem.go  worker_http.go  worker_pool.go
python/: benchmark.py  benchmark_db.py  benchmark_defaults.py  benchmark_filesystem.py  benchmark_webdataset.py  dataset.py  go_types.py  polyglot.py  raw_types.py  test_datago_client.py  test_datago_db.py  test_datago_edge_cases.py  test_datago_filesystem.py  test_datago_wds.py  test_pil_implicit_conversion.py
python/tests/: datago_test.py  test_datago.py
python_tests/: datago_test.py
rust/datago/: Cargo.toml  pyproject.toml
rust/datago/src/: client.rs  generator_http.rs  image_processing.rs  lib.rs  main.rs  worker_http.rs
src/: benchmark.py  client.rs  generator_files.rs  generator_http.rs  generator_wds.rs  go.sum  image_processing.rs  lib.rs  main.rs  polyglot.py  structs.rs  worker_files.rs  worker_http.rs  worker_wds.rs
src/cmd/: main.go
src/cmd/main/: main.go
src/pkg/: client.go  generator_db.go  generator_filesystem.go  serdes.go  utils.go
src/pkg/client/: architecture.go  backend_filesystem.go  backend_http.go  client.go  frontend_db.go  generator_db.go  generator_filesystem.go  serde.go  serdes.go  set.go  transforms.go
src/tests/: client_test.go
tests/: client_db_test.go  client_filesystem_test.go  client_test.go  client_test.rs  transform_test.go
