[package]
name = "datago"
edition = "2021"
version = "2026.1.3"

[lib]
# exposed by pyo3
name = "datago"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "datago"
path = "src/main.rs"

[dependencies]
image = { version = "0.25.6", features = ["png", "jpeg", "webp", "default-formats"] }
reqwest = { version = "0.12.15", features = ["blocking", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"
kanal = "0.1"
clap = { version = "4.5.27", features = ["derive"] }
tokio = { version = "1.43.1", features = ["rt-multi-thread", "macros"] }
prettytable-rs = "0.10.0"
pyo3 = { version = "0.22", features = ["extension-module"] }
threadpool = "1.8.1"
openssl = { version = "0.10", features = ["vendored"] }
walkdir = "2.5.0"
num_cpus = "1.16.0"
reqwest-middleware = "0.4.1"
reqwest-retry = "0.7.0"
rand = "0.9.0"
log = "0.4.27"
env_logger = "0.11.8"
tar = "0.4.44"
futures = "0.3.31"
flate2 = "1.1.1"
async-tar = "0.5.0"
tokio-util = { version = "0.7.15", features = ["io", "compat"] }
async-compression = {version= "0.4.23", features=["tokio"]}
bracoxide = "0.1.6"
infer = "0.16.0"
fast_image_resize = { version ="5.1.3", features=["image"]}
once_cell = "1.19.0"
dashmap = "5.5.3"
thiserror = "1.0.63"

[dev-dependencies]
tempfile = "3.13.0"
wiremock = "0.6.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true
codegen-units = 1
panic = "abort"     # Smaller binaries (no unwinding)
strip = true        # Strip symbols (Rust 1.59+)

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
