[package]
name = "datago"
edition = "2021"
version = "2026.1.2"

[lib]
# exposed by pyo3
name = "datago"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "datago"
path = "src/main.rs"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:prettytable-rs"]

[dependencies]
# Image: only enable formats we actually use (removes rav1e/AVIF which is slow to compile)
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp"] }
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"
kanal = "0.1"
# CLI-only dependencies (not needed for Python library)
clap = { version = "4.5.27", features = ["derive"], optional = true }
prettytable-rs = { version = "0.10.0", optional = true }
tokio = { version = "1.43.1", features = ["rt-multi-thread", "macros", "sync"] }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
threadpool = "1.8.1"
walkdir = "2.5.0"
num_cpus = "1.16.0"
reqwest-middleware = "0.4.1"
reqwest-retry = "0.7.0"
rand = "0.9.0"
log = "0.4.27"
env_logger = "0.11.8"
tar = "0.4.44"
# Use futures-util instead of full futures crate (smaller)
futures-util = "0.3.31"
tokio-tar = "0.3.1"
tokio-util = { version = "0.7.15", features = ["io"] }
bracoxide = "0.1.6"
infer = "0.16.0"
fast_image_resize = { version ="5.1.3", features=["image"]}

[dev-dependencies]
tempfile = "3.13.0"
wiremock = "0.6.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

# CI profile: optimized for build speed while maintaining good performance
# Use with: cargo build --profile ci
[profile.ci]
inherits = "release"
lto = "thin"          # ~3x faster than fat LTO, still provides good optimization
codegen-units = 16    # Enable parallel LLVM codegen
debug = false

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
