[package]
name = "datago"
edition = "2021"
version = "2026.1.2"

[lib]
# exposed by pyo3
name = "datago"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "datago"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:prettytable-rs"]

[dependencies]
# Image: only enable formats we actually use
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "webp"] }
reqwest = { version = "0.12.15", default-features = false, features = ["stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"
kanal = "0.1"
# CLI-only dependencies (not needed for Python library)
clap = { version = "4.5.27", features = ["derive"], optional = true }
prettytable-rs = { version = "0.10.0", optional = true }
tokio = { version = "1.43.1", features = ["rt-multi-thread", "macros", "sync"] }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
walkdir = "2.5.0"
num_cpus = "1.16.0"
reqwest-middleware = "0.4.1"
reqwest-retry = "0.7.0"
rand = "0.9.0"
log = "0.4.27"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color"] }
# Use futures-util instead of full futures crate (smaller)
futures-util = "0.3.31"
tokio-tar = { package = "astral-tokio-tar", version = "0.5.6" }
tokio-util = { version = "0.7.15", features = ["io"] }
bracoxide = "0.1.6"
fast_image_resize = { version ="5.1.3", features=["image"]}

[dev-dependencies]
tempfile = "3.13.0"
wiremock = "0.6.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

# CI profile: optimized for build speed
# Use with: cargo build --profile ci
[profile.ci]
inherits = "release"
opt-level = 2         # Faster than opt-level 3
lto = false           # Skip LTO for faster linking
codegen-units = 16    # Parallel LLVM codegen
debug = false

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
