[project]
name = "datago"
version = "0.6"
authors = [
  { name="Photoroom", email="team@photoroom.com" },
]
description = "A high performance dataloader for Python, written in Golang"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/photoroom/datago"
Issues = "https://github.com/photoroom/datago/issues"
