[project]
name = "datago"
dynamic = ["version"]
authors = [
  { name = "Benjamin Lefaudeux, Roman Frigg" },
  { name = "Photoroom", email = "team@photoroom.com" }
]
description = "A high performance dataloader for Python, written in Rust"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "pip>=25.0.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "typer>=0.10.0",
    "webdataset>=0.2.100",
    "zig>=1.0.dev0",
]

[project.urls]
Homepage = "https://github.com/photoroom/datago"
Issues = "https://github.com/photoroom/datago/issues"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"
target = "x86_64-unknown-linux-gnu"

[tool.maturin]
# Include additional files
include = ["LICENCE", "README.md"]
# Exclude files
exclude = []
# Bindings type
bindings = "pyo3"
# Control the platform tag on linux
compatibility = "linux"
# auditwheel mode, possible values are repair, check and skip
auditwheel = "repair"
# Don't check for manylinux compliance, deprecated in favor of auditwheel = "audit"
skip-auditwheel = false
# Python packages to include
python-packages = []
# Strip the library for minimum file size
strip = true
# Source distribution generator,
# supports cargo (default) and git.
sdist-generator = "cargo"
