[project]
name = "datago"
dynamic = ["version"]
authors = [
  { name = "Benjamin Lefaudeux, Roman Frigg, Tarek Ayed, Marco Forte, Photoroom ML team" },
  { name = "Photoroom", email = "team@photoroom.com" }
]
description = "A high performance dataloader for Python, written in Rust"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = ["pillow"]
[dependency-groups]
test = [
    "pytest",
    "typer",
    "tqdm",
    "numpy",
    "webdataset",
    "prek>=0.2.29",
]

dev = [
  "matplotlib",
"pandas",
"prek>=0.2.29",
]
[project.urls]
Homepage = "https://github.com/photoroom/datago"
Issues = "https://github.com/photoroom/datago/issues"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"
target = "x86_64-unknown-linux-gnu"

[tool.maturin]
# Include additional files
include = ["LICENCE", "README.md"]
# Exclude files
exclude = []
# Bindings type
bindings = "pyo3"
# Control the platform tag on linux
compatibility = "linux"
# auditwheel mode, possible values are repair, check and skip
auditwheel = "repair"
# Don't check for manylinux compliance, deprecated in favor of auditwheel = "audit"
skip-auditwheel = false
# Python packages to include
python-packages = []
# Strip the library for minimum file size
strip = true
# Source distribution generator,
# supports cargo (default) and git.
sdist-generator = "cargo"

[tool.ty.rules]
unresolved-import = "ignore"
